fix: Content got covered by the navbar

--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 body {
   background-image: url('background.png');
   background-size: cover;
+  margin-top: 70px; /* add a 70px margin to the top of the body */
 }  
 
 h1 {
@@ -35,6 +36,10 @@ nav ul {
 
 nav li {
   margin: 0 20px;
+}
+
+li {
+  color: white;
 }
 
 nav a {
